cloudformation/week-1.yaml
Description: Week-1 AWS EC2 Instance

Parameters:
  KeyName:
    Description: The EC2 Key Pair to allow SSH access to the instance
    Type: "AWS::EC2::KeyPair::KeyName"

  EC2InstanceImageId:
    Description: The EC2 Instance AMI ID
    Type: String
    Default: ami-08e2d37b6a0129927

  EC2InstanceType:
    Description: The EC2 Instance Type
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t2.small

  MyZoneId1:
    Description: The EC2 Zone Identifier 1
    Type: String
    Default: subnet-0dd78910b9d72fa32

  MyZoneId2:
    Description: The EC2 Zone Identifier 2
    Type: String
    Default: subnet-0eefbbe3abafa6af9

Resources:
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: AllowEC2Traffic
      GroupDescription: Enable SSH access and HTTP access on the inbound port
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: InstanceSecurityGroup

  EC2InstanceLaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Metadata:
      AWS::CloudFormation::Init:
        config:
          packages:
            yum:
              java: [ "1.8.0-openjdk" ]
    Properties:
      LaunchTemplateName: !Sub ${AWS::StackName}-launch-template
      LaunchTemplateData:
        KeyName: !Ref KeyName
        ImageId: !Ref EC2InstanceImageId
        InstanceType: !Ref EC2InstanceType
        SecurityGroupIds:
          - !GetAtt InstanceSecurityGroup.GroupId
        UserData: !Base64
          'Fn::Sub':
            - >
              #!/bin/bash -x

              # Install the files and packages from the metadata

              /opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --resource EC2InstanceLaunchTemplate
              --region ${AWS::Region}


              # Signal the status from cfn-init

              /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource
              EC2InstanceLaunchTemplate --region ${AWS::Region}
            - { }

  Week1ASG:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      VPCZoneIdentifier:
        - !Ref MyZoneId1
        - !Ref MyZoneId2
      LaunchTemplate:
        LaunchTemplateId: !Ref EC2InstanceLaunchTemplate
        Version: !GetAtt EC2InstanceLaunchTemplate.LatestVersionNumber
      MaxSize: '2'
      MinSize: '2'
      DesiredCapacity: '2'
